--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -1,11 +1,8 @@
-<div class="menu-background">
-    aaa
-</div>
-   
-<!--
-<button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<div class="menu-component">
+    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
     <mat-menu #menu="matMenu">
       <button mat-menu-item>Item 1</button>
       <button mat-menu-item>Item 2</button>
     </mat-menu>
-    -->
+</div>
+   
